src/shared/Shared.module.css
.smallimage {
  vertical-align: middle;
  height: 1em;
}

.texttag,
.texttag span {
  /* align smaller text vertically */
  vertical-align: middle;
  position: relative;
  white-space: pre-line;
}

.texttagnobreak {
  white-space: nowrap !important;
  vertical-align: initial !important;
}

@keyframes wave {
  from {
    top: -2px;
  }

  to {
    top: 2px;
  }
}
@keyframes shake {
  0% {
    top: -2px;
    left: -2px;
  }

  30% {
    top: 2px;
    left: 1px;
  }

  65% {
    top: -2px;
    left: 2px;
  }

  100% {
    top: 2px;
    left: -2px;
  }
}
@keyframes blink {
  0% {
    visibility: hidden;
  }
  49% {
    visibility: hidden;
  }
  50% {
    visibility: visible;
  }
}

.externallinks {
  display: flex;
  justify-content: center;
  align-items: stretch;
}

.externallinklogo {
  height: 25px;
  margin: 2px;
}

.navIcon {
  width: 30px;
  height: 30px;
}

.settingsButton {
  composes: navIcon;
  cursor: pointer;
}

.settingslogo {
  height: 30px;
  image-rendering: pixelated;
}

.settingsContainer {
  margin: 10px;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.movecontainer {
  display: flex;
  max-width: 460px;
  height: 160px;
  font-family: var(--sports-jersey);
}

.moveviewbar {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 64px;
  height: 100%;
  background-color: black;
}

.moveviewimage {
  width: 64px;
  height: 64px;
  background:
    linear-gradient(to right, var(--move-color), var(--move-color)),
    no-repeat var(--move-url),
    linear-gradient(black 0%, black 100%);
  background-blend-mode: multiply, normal;
}

.movepower {
  composes: numberFont from global;
  width: 64px;
  height: 64px;
  line-height: 64px;
  box-sizing: border-box;
  background-image:
    linear-gradient(to right, #606060, #606060),
    url("/gameassets/sprite2_0.png"),
    linear-gradient(to right, #000000, #000000);
  background-repeat: no-repeat;
  background-blend-mode: multiply, normal;
  text-align: center;
  font-size: 2.8em;
  color: white;
}

.moveseparator {
  width: 12px;
  background-color: black;
  border-left: 8px solid var(--move-color);
}

.movecontent {
  display: flex;
  position: relative;
  flex-direction: column;
  box-sizing: border-box;
  padding-right: 4px;
  width: auto;
  flex: 1 1;
  height: 100%;
  text-align: right;
  color: black;
  background-color: var(--move-color);
}

.moveothercolor {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;

  background-color: var(--move-dark);
  mix-blend-mode: darken;
}

.movehalftone {
  width: 100%;
  height: 100%;

  /* https://frontendmasters.com/blog/pure-css-halftone-effect-in-3-declarations/ */
  --dot: radial-gradient(closest-side, #666, #fff calc(100% / sqrt(1.2)));
  background-color: white;
  background:
    var(--dot) 0 0/ 1.5em 1.5em,
    var(--dot) 0.75em 0.75em/ 1.5em 1.5em,
    linear-gradient(330deg, #777, #eee);
  background-blend-mode: multiply;
  filter: contrast(16);
  mix-blend-mode: screen;
}

.movename {
  font-size: 2.3em;
  height: 33%;
  display: flex;
  justify-content: end;
  align-items: center;
  z-index: 1;
}

:root:lang(zh, ja, kr) .movename {
  font-size: 1.6em;
}

.movenamelong {
  composes: movename;
  font-size: 1.6em;
}

.movefriend {
  text-align: right;
  height: 70%;
  background-size: contain;
  background-position: 50%;
  background-repeat: no-repeat;
  aspect-ratio: 1;
}

.movefriend span {
  font-size: 0.7em;
  color: pink;
  text-shadow: black 0px 0px 10px;
}

.movelearnerbutton {
  filter: invert();
  height: 50%;
  cursor: pointer;
}

.movedesc {
  font-size: 1.3em;
  overflow-y: auto;
  margin: auto 0;
  padding-bottom: 4px;
  z-index: 1;
}

@media all and (max-aspect-ratio: 1/1) and (max-width: 800px) {
  .movename {
    font-size: 1.6em;
  }
  .movenamelong {
    composes: movename;
    font-size: 1.2em;
  }
  .movedesc {
    font-size: 1em;
  }
}

.movemodalview {
  display: flex;
  flex-direction: column;
  max-height: 90dvh;
}

.movemodalview .movecontainer {
  width: 460px;
  max-width: 95%;
  margin: 8px;
  flex: 1 0 auto;
}

.movebeastierow {
  display: flex;
  width: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  flex: 1 1 auto;
}

.movebeastietitle {
  display: flex;
  flex: 1 1 auto;
}

.movebeastietitle div {
  flex: 1 1 0;
  text-align: center;
}

.movebeastielist {
  display: flex;
  justify-content: stretch;
  flex-direction: column;
  text-align: center;
  flex: 1 1 0;
  min-width: 0;
}

.movebeastielist a {
  display: flex;
  justify-content: center;
  align-items: center;
}

.movebeastielist img {
  height: 3em;
  flex: 0 1 auto;
}

.movebeastielist div {
  flex: 0 1 auto;
  text-align: center;
}

@media all and (max-aspect-ratio: 1/1) and (max-width: 800px) {
  .movebeastielist div {
    flex: 1 1 auto;
  }
}

.animationtoggle {
  display: flex;
  user-select: none;
  align-items: center;
}

.beastieSelectContainer {
  width: calc(round(down, 90vw, 245px) + 13px);
  height: 90dvh;
  display: flex;
  flex-direction: column;
  gap: 4px;
  text-align: center;
}

.beastieSelectOptions {
  display: flex;
  width: 100%;
  flex-wrap: wrap;
}

.beastieSelect {
  display: flex;
  flex-wrap: wrap;
  gap: 5px;
  width: 100%;
  overflow-y: auto;
  align-content: flex-start;
  padding-bottom: 8px;
}

.beastieSelectBeastie {
  display: flex;
  width: 240px;
  max-width: 48%;
  height: 120px;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.3);
  color: white;
  text-decoration: none;
  cursor: pointer;
  justify-content: center;
}

.beastieSelectBeastieNoSel {
  composes: beastieSelectBeastie;
  opacity: 0.5;
  cursor: default;
}

.beastieSelectBeastieIm {
  flex-shrink: 1;
  max-height: calc(100% - 10px);
  flex-shrink: 1;
  margin-left: 5px;
  max-width: 50%;
}

.beastieSelectNameNum {
  display: flex;
  flex-grow: 1;
  flex-direction: column;
  align-items: center;
}

.beastieSelectNum {
  composes: numberFont from global;
  font-size: 2em;
}

.beastieSelectNum::first-letter {
  font-size: 0.85em;
}

@media all and (max-width: 544px) {
  .beastieSelectBeastie {
    flex-direction: column;
    justify-content: center;
    gap: 8px;
    height: 110px;
  }
  .beastieSelectNameNum {
    flex-direction: row;
    flex-grow: 0;
  }
  .beastieSelectNum {
    font-size: 0.8em;
    padding-top: 0.5px;
  }
  .beastieSelectNum::after {
    content: "-";
    color: transparent;
  }
}

